--- a/flask-03-04-If-Handling-Routes-and-Get-Post-Methods/flask-03-handling-routes-and-if-for/flask_If_for_structure/templates/index.html
+++ b/flask-03-04-If-Handling-Routes-and-Get-Post-Methods/flask-03-handling-routes-and-if-for/flask_If_for_structure/templates/index.html
@@ -11,5 +11,6 @@
 {% else %}
     <h1> "There is no message in here...</h1> 
 {% endif %}
+<img src="https://i.scdn.co/image/ab67616d0000b2739b0166b74056ced0f29fcf57" alt="galatasaray">
 </body>
 </html>
